# git-worktree-manager

./: .coverage  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo.py  pyproject.toml
.kiro/specs/git-worktree-manager/: design.md  requirements.md  tasks.md
git_worktree_manager/: __init__.py  cache.py  cli.py  config.py  error_recovery.py  exceptions.py  git_ops.py  models.py  ui_controller.py  worktree_manager.py
tests/: test_cache.py  test_cli.py  test_config.py  test_error_recovery.py  test_exceptions.py  test_final_integration.py  test_fixtures.py  test_git_ops.py  test_integration.py  test_models.py  test_performance.py  test_setup.py  test_ui_controller.py  test_worktree_manager.py
